# hakuhyo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  typos.toml
docs/: DESIGN.md
examples/: clear_token.rs
src/: app.rs  auth.rs  config.rs  emoji.rs  events.rs  main.rs  term_bg.rs  token_store.rs  ui.rs
src/discord/: gateway.rs  mod.rs  models.rs  rest.rs
