[package]
name = "hakuhyo"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# HTTP & WebSocket
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# JSON処理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"

# ロギング
log = "0.4"
env_logger = "0.11"

# ユーティリティ
chrono = "0.4"
